# voice_classification

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __main__.py  create_excel_from_pickled_sheet_results.py  create_exhaustive_study_sheet.py  pytest.ini  run_evaluation_protocol.py  run_optuna_tuning.py  settings.py  train_autoencoder.py  train_spectrogram.py
src/config/: lk_hyperparameters_optuna_tuning.yml  lk_hyperparameters_spectrogram.yml
src/model/: model_factory.py  model_utils.py  tabular_mlp.py
src/model/pretrained/: __init__.py  ast.py  beats.py  cache_env.py  checkpoint_utils.py  efficientat_factory.py  pann.py  passt.py  pretrained_model_embedder_with_clf.py  pretrained_models_params.py  vggish.py  wav2vec2.py
src/model/scratch/: __init__.py  scratch_cnn_models.py  scratch_cnnlstm.py  scratch_lstm.py  scratch_vit.py
src/model/self_supervised_autoencoder/: __init__.py  autoencoder.py
src/schemas/: dataclasses.py  enums.py  typed_dicts.py
src/test/: test_create_excel_from_pickled_sheet_results.py  test_create_exhaustive_study_sheet.py  test_model_ast.py  test_model_autoencoder.py  test_model_factory.py  test_patient_aware_split.py  test_spectrogram_file_dataset.py  test_toolkit_auroc.py  test_toolkit_config_utils.py  test_toolkit_naming.py
src/test/test_run_dummy_files/: test_metadata_non_uk.csv  test_metadata_uk.csv  test_metadata_uk_v2.csv
src/utils/data_preprocessing/: dataset_split_manager.py  demographic_metadata_loader.py  patient_aware_split.py  spectrogram_file_dataset.py
src/utils/reporting/: demo_data_table.py  excel_study.py  (+5 more)
(+36 files in other folders)
